syntax = "proto3";

package io.restorecommerce.contact_point_type;

import "io/restorecommerce/resource_base.proto";
import "io/restorecommerce/auth.proto";
import "io/restorecommerce/meta.proto";
import "io/restorecommerce/status.proto";
import "io/restorecommerce/options.proto";

/*
* Microservice definition.
*/
service ContactPointTypeService {
  rpc Read (io.restorecommerce.resourcebase.ReadRequest) returns (ContactPointTypeListResponse) {
    option (io.restorecommerce.options.is_query) = true;
  };
  rpc Create (ContactPointTypeList) returns (ContactPointTypeListResponse);
  rpc Delete (io.restorecommerce.resourcebase.DeleteRequest) returns (io.restorecommerce.resourcebase.DeleteResponse);
  rpc Update (ContactPointTypeList) returns (ContactPointTypeListResponse);
  rpc Upsert (ContactPointTypeList) returns (ContactPointTypeListResponse);
}

message Deleted {
  optional string id = 1;
}

message ContactPointTypeList {
  repeated ContactPointType items = 1;
  optional uint32 total_count = 2;
  optional io.restorecommerce.auth.Subject subject = 3;
}

message ContactPointType {
  optional string id = 1;
  optional io.restorecommerce.meta.Meta meta = 2;
  optional string type = 3;
}

message ContactPointTypeListResponse {
  repeated ContactPointTypeResponse items = 1;
  optional uint32 total_count = 2;
  optional io.restorecommerce.status.OperationStatus operation_status = 3;
}

message ContactPointTypeResponse {
  optional ContactPointType payload = 1;
  optional io.restorecommerce.status.Status status = 2;
}
