syntax = "proto3";

package io.restorecommerce.country;

import "io/restorecommerce/resource_base.proto";
import "io/restorecommerce/meta.proto";
import "io/restorecommerce/auth.proto";
import "io/restorecommerce/status.proto";
import "io/restorecommerce/options.proto";

// Used by resolvers
import "io/restorecommerce/locale.proto";

/*
* Microservice definition.
*/
service CountryService {
  rpc Read (io.restorecommerce.resourcebase.ReadRequest) returns (CountryListResponse) {
    option (io.restorecommerce.options.is_query) = true;
  };
  rpc Create (CountryList) returns (CountryListResponse);
  rpc Delete (io.restorecommerce.resourcebase.DeleteRequest) returns (io.restorecommerce.resourcebase.DeleteResponse);
  rpc Update (CountryList) returns (CountryListResponse);
  rpc Upsert (CountryList) returns (CountryListResponse);
}

message Deleted {
  optional string id = 1;
}

message CountryList {
  repeated Country items = 1;
  optional uint32 total_count = 2;
  optional io.restorecommerce.auth.Subject subject = 3;
}

message CountryListResponse {
  repeated CountryResponse items = 1;
  optional uint32 total_count = 2;
  optional io.restorecommerce.status.OperationStatus operation_status = 3;
}

message CountryResponse {
  optional Country payload = 1;
  optional io.restorecommerce.status.Status status = 2;
}

message Country {
  message LocaleName {
    optional string locale = 1;
    optional string name = 2;
  }

  optional string id = 1;
  optional io.restorecommerce.meta.Meta meta = 2;
  optional string name = 3;
  optional string country_code = 4; // primaly used in target application (fallback)
  optional string geographical_name = 5;
  repeated string economic_areas = 6;
  optional string country_code_alpha_2 = 7; // ISO 3166-1 alpha-2
  optional string country_code_alpha_3 = 8; // ISO 3166-1 alpha-3
  repeated string locale_ids = 9 [
    (io.restorecommerce.options.resolver) = {
      target_type: ".io.restorecommerce.locale.Locale",
      target_service: "master_data",
      target_sub_service: "locale",
      target_method: "Read",
      field_name: "locales",
    }
  ]; // list of common locale in this country, sorted by priority first
  repeated LocaleName localized_names = 10; // list of localized names
  repeated string timezone_ids = 11 [
    (io.restorecommerce.options.resolver) = {
      target_type: ".io.restorecommerce.timezone.Timezone",
      target_service: "master_data",
      target_sub_service: "timezone",
      target_method: "Read",
      field_name: "timezones",
    }
  ]; // list of avalable timezones in this country
}
