syntax = "proto3";

package io.restorecommerce.organization;

import "google/protobuf/any.proto";

import "io/restorecommerce/resource_base.proto";
import "io/restorecommerce/meta.proto";
import "io/restorecommerce/auth.proto";
import "io/restorecommerce/status.proto";
import "io/restorecommerce/image.proto";
import "io/restorecommerce/options.proto";

// Used by resolvers
import "io/restorecommerce/address.proto";
import "io/restorecommerce/contact_point.proto";
import "io/restorecommerce/payment_method.proto";

service OrganizationService {
  rpc Read (io.restorecommerce.resourcebase.ReadRequest) returns (OrganizationListResponse) {
    option (io.restorecommerce.options.is_query) = true;
  };
  rpc Create (OrganizationList) returns (OrganizationListResponse);
  rpc Delete (io.restorecommerce.resourcebase.DeleteRequest) returns (io.restorecommerce.resourcebase.DeleteResponse);
  rpc Update (OrganizationList) returns (OrganizationListResponse);
  rpc Upsert (OrganizationList) returns (OrganizationListResponse);
}

message Deleted {
  string id = 1;
}

message DeleteOrgData {
  repeated string org_ids = 1;
  repeated string user_ids = 2;
  io.restorecommerce.auth.Subject subject = 3;
}

message OrganizationList {
  repeated Organization items = 1;
  optional uint32 total_count = 2;
  io.restorecommerce.auth.Subject subject = 3;
}

message OrganizationListResponse {
  repeated OrganizationResponse items = 1;
  uint32 total_count = 2;
  io.restorecommerce.status.OperationStatus operation_status = 3;
}

message OrganizationResponse {
  Organization payload = 1;
  io.restorecommerce.status.Status status = 2;
}

message Organization {
  optional string id = 1; /// Organization ID, unique, key
  optional io.restorecommerce.meta.Meta meta = 2;
  optional string parent_id = 3 [
    (io.restorecommerce.options.resolver) = {
      target_type: ".io.restorecommerce.organization.Organization",
      target_service: "master_data",
      target_sub_service: "organization",
      target_method: "Read",
      field_name: "parent",
    }
  ]; //  Hierarchically superior organization; may be null
  repeated string contact_point_ids = 4 [
    (io.restorecommerce.options.resolver) = {
      target_type: ".io.restorecommerce.contact_point.ContactPoint",
      target_service: "master_data",
      target_sub_service: "contact_point",
      target_method: "Read",
      field_name: "contactPoints",
    }
  ]; // list of possible legal addresses of different types
  optional string website = 5;
  optional string email = 6;
  optional io.restorecommerce.image.Image logo = 7; // base64; arangoDB does not support blob storage
  optional string vat_id = 8;
  optional string isic_v4 = 9;
  optional string registration = 10;
  optional string registration_court = 11;
  optional string name = 12;
  repeated string payment_method_ids = 13 [
    (io.restorecommerce.options.resolver) = {
      target_type: ".io.restorecommerce.payment_method.PaymentMethod",
      target_service: "payment",
      target_sub_service: "payment_method",
      target_method: "Read",
      field_name: "paymentMethods",
    }
  ];
  optional google.protobuf.Any data = 14; /// additional data
}
