syntax = "proto3";

package io.restorecommerce.timezone;

import "io/restorecommerce/resource_base.proto";
import "io/restorecommerce/meta.proto";
import "io/restorecommerce/auth.proto";
import "io/restorecommerce/status.proto";
import "io/restorecommerce/options.proto";

/*
* Microservice definition.
*/
service TimezoneService {
  rpc Read (io.restorecommerce.resourcebase.ReadRequest) returns (TimezoneListResponse) {
    option (io.restorecommerce.options.is_query) = true;
  };
  rpc Create (TimezoneList) returns (TimezoneListResponse);
  rpc Delete (io.restorecommerce.resourcebase.DeleteRequest) returns (io.restorecommerce.resourcebase.DeleteResponse);
  rpc Update (TimezoneList) returns (TimezoneListResponse);
  rpc Upsert (TimezoneList) returns (TimezoneListResponse);
}

message Deleted {
  optional string id = 1;
}

message TimezoneList {
  repeated Timezone items = 1;
  optional uint32 total_count = 2;
  optional io.restorecommerce.auth.Subject subject = 3;
}

message TimezoneListResponse {
  repeated TimezoneResponse items = 1;
  optional uint32 total_count = 2;
  optional io.restorecommerce.status.OperationStatus operation_status = 3;
}

message TimezoneResponse {
  optional Timezone payload = 1;
  optional io.restorecommerce.status.Status status = 2;
}

message TimezoneOffset {
  optional int32 hours = 1;
  optional int32 minutes = 2;
}

message Timezone {
  optional string id = 1;
  optional io.restorecommerce.meta.Meta meta = 2;
  optional string name = 3; // display name
  optional string value = 4; // official name
  optional string abbreviation_std = 5;
  optional string abbreviation_dst = 6;
  optional TimezoneOffset offset_std = 7;
  optional TimezoneOffset offset_dst = 8;
  optional string description = 9;
}
